# mock-llm

./: Containerfile  mock_openai_server.py  pyproject.toml  test_mock_openai_server.py
.github/workflows/: ci.yml
k8s/: deployment-dev.yaml  deployment.yaml
